Fix bug 1471534: Truncate missing strings with suggestions (#993)
Also, there is no such thing as Unreviewed *translation* status, so
Pontoon.getEntityStatus() will never return it and we don't need to have
rules for it in the CSS.

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1166,7 +1166,7 @@ body > header aside p {
 }
 
 #entitylist > .wrapper > ul > li.translated p span.source-string,
-#entitylist > .wrapper > ul > li.unreviewed p span.source-string,
+#entitylist > .wrapper > ul > li.missing.has-translations p span.source-string,
 #entitylist > .wrapper > ul > li.fuzzy p span.source-string,
 #entitylist > .wrapper > ul > li.partial p span.source-string,
 #entitylist > .wrapper > ul > li p span.translation-string:not(:empty) {
